--- a/Tp3_correction/index.html
+++ b/Tp3_correction/index.html
@@ -18,20 +18,19 @@
             <div class="header">
 
                 <div class="logo">
-                    <h1>C <span> e </span> soir</h1>
+                    <h1>C<span>e</span>soir</h1>
                     <p class="trait"></p>
                 </div>
 
+                <nav class="nav_bar">
+                    <ul>
+                        <li><a href="#story">Our story</a></li>
+                        <li><a href="#fare">Fare</a></li>
+                        <li><a href="#drink">Drink</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                    </ul>
+                </nav>
             </div>
-
-            <nav class="nav_bar">
-                <ul>
-                    <li><a href="#story">Our story</a></li>
-                    <li><a href="#fare">Fare</a></li>
-                    <li><a href="#drink">Contact</a></li>
-                    <li><a href="#contact"></a></li>
-                </ul>
-            </nav>
         
             <div class="bloc_cerf">
 
@@ -105,7 +104,7 @@
                 <!-- début bas du site -->
                 <div class="footer_left">
                     <div class="logo">
-                        <h3>C <span>e</span> soir</h3>
+                        <h3>C<span>e</span>soir</h3>
                         <p class="trait"></p>
                     </div>
                     <div class="espace">
