--- a/TP5_correction/index.html
+++ b/TP5_correction/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="fr">
 <head>
@@ -196,7 +197,7 @@
                 </div>
             </div>
 
-            <div class="card nd">
+            <div class="card st">
                 <div class="card-img st"><div class="promo"></div></div>
                 <div class="card-body">
                     <h6 class="card-title">Carreaux de ciment imitations</h6>
@@ -237,7 +238,7 @@
             </div>
 
             <div class="card nd">
-                <div class="card-img nd"></div>
+                <div class="card-img st"></div>
                 <div class="card-body">
                     <h6 class="card-title">Carreaux de ciment imitations</h6>
                     <p class="card-price">19,99 € TTC / m²</p>
@@ -276,8 +277,10 @@
             <ul>
                 <li>
                     <div class="addresse"></div>
-                    <p class="e-title">Adresse :</p>
-                    <div class="e-desc">Avenue Leclerc <br> 75015 Paris</div>
+                    <p class="e-title">ESHOP</p>
+                    <div class="e-desc">
+                        Adresse :
+                        Avenue Leclerc <br> 75015 Paris</div>
                 </li>
                 <li>
                     <div class="tel"></div>
